[metadata]
name = pylibmodbus
version = 0.6.0
author = Stéphane Raimbault
author_email = stephane.raimbault@gmail.com
description = Python wrapper for libmodbus
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/stephane/pylibmodbus
project_urls =
        Bug Tracker = https://github.com/stephane/pylibmodbus/issues
classifiers =
        Programming Language :: Python :: 3
        License :: OSI Approved :: BSD License
        Operating System :: OS Independent
        Intended Audience :: Developers
        Natural Language :: English

[options]
packages = find:
python_requires = >=3.7
install_requires =
    cffi>=1.15.1
